@@ -1,8 +1,8 @@
 Package: CellNOptR
 Type: Package
 Title: Training of boolean logic models of signalling networks using prior knowledge networks and perturbation data. 
-Version: 1.3.32
-Date: 2012-09-10
+Version: 1.3.33
+Date: 2012-09-20
 Author: T.Cokelaer, F.Eduati, A.MacNamara, S.Schrier, C.Terfve
 Maintainer: T.Cokelaer <cokelaer@ebi.ac.uk>
 Depends: R (>= 2.15.0), RBGL, graph, methods
